--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "json-server --watch db.json --port 10000 --host 0.0.0.0"
+    "start": "json-server --watch db.json --host 0.0.0.0 --port $PORT"
   },
   "keywords": [],
   "author": "",
